<resources>
    <string name="app_name">MyShop</string>

    <string name="bienvenido">Bienvenido!</string>
    <string name="registry_title">Registrate!</string>
    <string name="registry_message">Ingresa tus datos:</string>
    <string name="name">Nombre</string>
    <string name="usuario">Correo</string>
    <string name="contrasena">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="registrar">Registrar</string>
    <string name="create_account">Crear un usuario</string>
    <string name="add_cart">Agregar al carrito</string>

    <string name="action_sign_in_short">Ir</string>
    <string name="error_invalid_email">Correo inválido</string>
    <string name="error_invalid_password">Contraseña muy corta.</string>
    <string name="error_incorrect_password">Contraseña incorrecta</string>
    <string name="error_field_required">Campo requerido.</string>

    <string name="error_alertDialog_title">Hubo un problema</string>
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>

    <string name="logout_title">Cerrar sesión</string>
    <string name="logout_accept">Si, cerrar sesión</string>
    <string name="logout_question">¿Estas seguro que deseas cerrar sesión?</string>

    <string name="my_products">Nuestros productos</string>
    <string name="your_cart">Tu carrito</string>
    <string name="price">$%1$s</string>

    <string name="product_added">Producto agregado al carrito</string>

    <string name="detail_activity_title">Detalle de producto</string>
    <string name="total">Total:</string>
</resources>
