<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".activities.LoginActivity">

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:padding="20dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="160dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/logo"/>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:text="@string/bienvenido"
                android:textColor="@color/black"
                android:textSize="32sp"
                android:layout_marginTop="25dp"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittextbg"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:padding="5dp"
                android:paddingStart="5dp"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/et_login_usuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/usuario"
                    android:background="@color/transparent"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:paddingStart="5dp"
                android:padding="5dp"
                android:background="@drawable/edittextbg"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/contrasena"
                    android:imeActionId="6"
                    android:background="@color/transparent"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/tv_create_user"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/create_account"
                android:textColor="@color/colorPrimaryDark"
                android:layout_gravity="end"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:textSize="16sp"
                android:layout_marginTop="15dp"/>


            <Button
                android:id="@+id/btn_logIn"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/ingresar"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>